--- a/resources/site2/sass/main.scss
+++ b/resources/site2/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'skin';
 @import 'grid';
 @import 'example';
+@import 'topMain';
 @import "topSide";
 @import "navigation";
 @import "font-awesome/font-awesome";
