--- a/resources/site2/sass/_example.scss
+++ b/resources/site2/sass/_example.scss
@@ -23,6 +23,7 @@
     margin-right: 0;
     margin-top: 1em;
     width: 8em;
+    height: 2.5em;
     display: block;
     background-color: $button-color;
     border: none;
