--- a/resources/site2/sass/_globalScheme.scss
+++ b/resources/site2/sass/_globalScheme.scss
@@ -11,3 +11,7 @@ $button-text: white;
 
 $code-color: darkgreen;
 $code-background-color: #F0F0F0;
+
+$buttonHoverLightenAmount: 10;
+
+$borderRadius: 0.25rem;
