--- a/resources/site2/sass/_navigation.scss
+++ b/resources/site2/sass/_navigation.scss
@@ -18,4 +18,9 @@ $topBottomPadding: 0.4rem;
       border-radius: $borderRadius;
     }
   }
+  li.separator {
+    display: block;
+    height: 0.6rem;
+    padding: 0;
+  }
 }
