--- a/resources/site2/sass/_example.scss
+++ b/resources/site2/sass/_example.scss
@@ -3,8 +3,9 @@
 
 .example {
 
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  overflow: auto;
 
   .preWrapper {
     background-color: #F0F0F0;
@@ -23,7 +24,7 @@
     margin-left: auto;
     margin-right: 0;
     margin-top: 1em;
-    width: 8em;
+    width: 12em;
     height: 2.5em;
     display: block;
     background-color: $button-color;
